--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>To Do List</title>
 </head>
 
-<body background="C:\Users\WIN10\Desktop\internship task 1 - TO DO\images.jfif">
+<body background="C:\Users\WIN10\Desktop\internship task 1 - TO DO\images.jpg">
 
     <h1><u>To Do List</u></h1>
     <div class="container">
